polish: Observatory Quest (#2350)
* test: opt in to sidebar test

* refactor: modernize

* nit: remove unused assistant step

* polish

This replaces the custom "StarsignAnswer" step with a conditional step + a bunch of npc steps instead

More lines of code, but more standard

I noticed you could maybe potentially figure out which chest to find the key in asap, but without more accounts to test
with I didn't dare make that change, so I just added a comment for for future adventurers.

* nit: plank always has 3 quantity